cleanup files and fix sgfault on exit

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,7 +9,7 @@ endif ()
 # raw to bricktree converter tool
 # -----------------------------------------------------
 OSPRAY_CREATE_APPLICATION(ospRaw2Bricks
-  raw2bricks.cpp  
+  ospRaw2Bricks.cpp  
   LINK
   ospray_bricktree)
 
@@ -17,7 +17,7 @@ OSPRAY_CREATE_APPLICATION(ospRaw2Bricks
 ## Benchmarker Widget
 ## ====================================================================== ##
 if (OSPRAY_MODULE_BRICKTREE_WIDGET)
-
+  # transfer function widget
   set(TFN_MODULE_DEFAULT_ROOT 
       ${PROJECT_SOURCE_DIR}/apps/exampleViewer/widgets/TransferFunctionModule) 
   if(TFN_MODULE_ROOT)
@@ -35,19 +35,18 @@ if (OSPRAY_MODULE_BRICKTREE_WIDGET)
       ${TFN_MODULE_ROOT}/src/common/jsoncpp.cpp
       ${TFN_MODULE_ROOT}/src/widgets/TransferFunctionWidget.cpp)
   endif (TFN_MODULE)
-
+  # HDF5 
   find_package(HDF5 REQUIRED)
-
+  # build
   include_directories(
     ${HDF5_INCLUDE_DIRS}
     opengl/external
     ${PROJECT_SOURCE_DIR}/apps/exampleViewer/common/imgui
     ${TFN_MODULE_INCLUDE_DIR}
     ${OPENGL_INCLUDE_DIR})
-
   ospray_create_application(ospBrickWidget
-    ospBench.cpp
-    sgBrickTree.cpp
+    ospBrickTreeApp.cpp
+    ospBrickTreeTools.cpp
     opengl/viewer.cpp
     opengl/external/glad.c
     opengl/external/imgui_glfw_impi.cpp
@@ -61,23 +60,19 @@ if (OSPRAY_MODULE_BRICKTREE_WIDGET)
     ${HDF5_C_LIBRARIES}
     ${HDF5_C_HL_LIBRARIES}
     ${OPENGL_LIBRARIES})
-
   set_target_properties(ospBrickWidget
     PROPERTIES 
     CXX_STANDARD 11
     COMPILE_DEFINITIONS USE_VIEWER=1)
-
 endif (OSPRAY_MODULE_BRICKTREE_WIDGET)
-
-
 
 ## ==================================================================== ##
 ## Benchmarker
 ## ==================================================================== ##
 if(OSPRAY_MODULE_BRICKTREE_BENCH)
   OSPRAY_CREATE_APPLICATION(ospBrickBench
-    sgBrickTree.cpp
-    ospBench.cpp
+    ospBrickTreeApp.cpp
+    ospBrickTreeTools.cpp
     LINK
     ospray
     ospray_common
