--- a/apps/opengl/CMakeLists.txt
+++ b/apps/opengl/CMakeLists.txt
@@ -33,6 +33,7 @@ ospray_create_library(ospray_app_viewer
   viewer.cpp
   src/engine.cpp
   src/common/properties.cpp
+  src/common/camera.cpp
   ${TFN_MODULE_SRC}
   external/glad.c
   external/imgui_glfw_impi.cpp
